--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenProjects.id | FOSS Platform</title>
     <link rel="icon" href="img/Icon.svg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <meta name="description" content="Platform Open Source Indonesia">
     <meta name="author" content="Eric Julianto">
     <style type="text/css">
@@ -14,13 +16,27 @@
             width: 100%;
             height: 100%;
             background: url('img/Logo.svg') center no-repeat;
+            max-height: 80vh;
             background-color: #004AAD;
+        }
+
+        .social-media {
+            color: white;
+            text-align: center;
+            margin-top: 60vh;
+            background-color: #004AAD;
+            font-size: 3em;
         }
     </style>
 </head>
 
 <body>
-
+<div class="social-media">
+    <a href="https://discord.gg/jXzjHu9fJ7"><i class="fab fa-discord text-white px-3"></i></a>
+    <a href="https://github.com/OpenProjects-id"><i class="fab fa-github text-white px-3"></i></a>
+    <a href="https://www.instagram.com/openprojects.id/"><i class="fab fa-instagram text-white px-3"></i></a>
+    <a href="https://www.linkedin.com/company/open-projects-id/"><i class="fab fa-linkedin text-white px-3"></i></a>
+</div>
 </body>
 
 </html>
